--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/forgot-password"
 @using Microsoft.AspNetCore.Mvc.Localization
 @using Microsoft.Extensions.Localization
 @using Volo.Abp.Account.Localization
@@ -15,30 +15,27 @@
     ViewBag.Keywords = "forgot password,reset password,email address,email";
 }
 
-<h4 class="mb-4 fw-semibold">
-    @L["ForgotPassword"]
-</h4>
-
-<p>@L["SendPasswordResetLink_Information"]</p>
-
-<div class="alert alert-info d-flex align-items-center" role="alert">
-    Please review your information and submit it
+<h1 class="mb-1 fs-3">
+    Retrieve Your Password
+</h1>
+<div class="mb-4">
+    <a href="@Url.Page("/Account/LocalLogin")">
+        <i class="fas fa-chevron-left me-1"></i>Back
+    </a>
 </div>
+
+<p>
+    No problem! Enter the email address associated with your account and we'll send you instructions to reset your password.
+</p>
 
 <form method="post">
 
-    <abp-input asp-for="Input.EmailAddress" auto-focus="true" type="email"
-               label="@L["DisplayName:Email"].Value" autocomplete="email" />
+    <abp-input asp-for="Input.EmailAddress" auto-focus="true" autocomplete="email" />
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
-            @L["Submit"]
+            Send Password Reset Email
             <span class="spinner-box"></span>
-        </abp-button>
-
-        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="mt-3">
-            @L["Back"]
         </abp-button>
     </div>
 </form>
