Informative on password reset

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -15,9 +15,22 @@
 
 }
 
+
 <h1 class="mb-4 fs-3">
     @L["ResetPassword"]
 </h1>
+
+@if (Model.IsInvalidLink)
+{
+    <div class="alert alert-danger">
+        Hmm, there seems to be a problem with the activation link. These links can expire after a while.
+    </div>
+
+    <p>
+       No worries! You can easily request a new password reset link by clicking 
+       <a href="@Url.Page("/Account/ForgotPassword")">here</a>.
+    </p>
+}
 
 <p>
     @L["ResetPassword_Information"]
