--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccess.cshtml
@@ -36,21 +36,21 @@
 </p>
 
 <div class="alert alert-warning">
-    If you are using a public machine, please clean up 
-    the stored information with the button below. 
-    <div class="d-grid gap-2">
-        <a abp-button="Info" onclick="cleanUpUserData(event);">Clean up data</a>
-    </div>
+    If you are using a public machine, please clean up
+    the stored information with the button below.
+</div>
+<div class="d-grid gap-2">
+    <a abp-button="Warning" onclick="cleanUpUserData(event);">Clean up data</a>
 </div>
 
-<div class="toast-container position-fixed bottom-0 end-0 p-3">
-    <div id="cleanedToast" class="toast bg-info" role="alert" aria-live="assertive" aria-atomic="true">
+<div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3">
+    <div id="cleanedToast" class="toast bg-success text-white" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
-            <strong class="me-auto">Clean</strong>
+            <strong class="me-auto">Data Privacy and Security</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
         <div class="toast-body">
-            The stored data has been cleaned up.
+            Local data has been cleaned up.
         </div>
     </div>
 </div>
