--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
@@ -22,8 +22,12 @@
     Welcome to @Model.TenantName! You've successfully joined your organization.
 </div>
 
+<h2 class="fs-5">What to do next</h2>
+
+
 @if (Model.IsAuthenticated)
 {
+
     <p>
         Your membership is now active.  We're excited to have you on board.
         Click the button below to jump right into the main application.
@@ -35,12 +39,11 @@
 }
 else if (Model.NextAction == PolpAbp.Framework.Exceptions.Identity.UserOnboardingNextActionEnum.WaitAdminApprovel)
 {
+
     <p>
-        Your membership application has been submitted successfully. 
         The organization's administrator will review your request shortly.
      </p>   
      <p>
-        You'll receive a notification once your access is granted.
         In the meantime, feel free to browse our website and learn more about what we do.
     </p>
 
@@ -48,7 +51,6 @@ else if (Model.NextAction == PolpAbp.Framework.Exceptions.Identity.UserOnboardin
 else if (Model.NextAction == PolpAbp.Framework.Exceptions.Identity.UserOnboardingNextActionEnum.ActivateEmail)
 {
     <p>
-        Your membership application has been submitted successfully.
         We've just sent you a confirmation email with a link to activate your account.  
         Click the link in the email to activate your account and get started.
     </p>
@@ -56,10 +58,18 @@ else if (Model.NextAction == PolpAbp.Framework.Exceptions.Identity.UserOnboardin
 else
 {
     <p>
-        Your membership application has been submitted successfully. Click the button below to sign into your account.
+        Your account is ready. Click the button below to sign into your account.
     </p>
 
     <div class="d-grid gap-2">
         <a abp-button="Primary" asp-page="/Account/Login">Sign In</a>
     </div>
 }
+
+<h2 class="fs-5">
+    Need Help?
+</h2>
+
+<p>
+    If you have any trouble accessing your account, please contact your administrator or us.
+</p>
