--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
@@ -9,6 +9,12 @@
 @model PolpAbp.Presentation.Account.Web.Pages.Account.AuthorizeSuccessModel
 @inject IHtmlLocalizer<AccountResource> L
 @{
+
+    // Note that we on purpose use a path with dash. 
+    // Part of the reason is that this is an internal URL
+    // Another is that this url is used in several places 
+    // The impact of changing it is big.
+
     ViewBag.Title = "Authorization Successful";
     ViewBag.Description = "You are now logged in and can access the system.";
     ViewBag.Keywords = "authorization successful";
