Improved the success message

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/AuthorizeSuccess.cshtml
@@ -60,13 +60,13 @@
 
 }
 
-<h1 class="mb-1 fs-3">
+<h1 class="h3">
     Authorization Successful!
 </h1>
 
-<div class="alert alert-success">
+<h2 class="h4" title="You can now close this window and return to the app to finish signing in.">
     Authorization complete! You can now close this window and return to the app to finish signing in.
-</div>
+</h2>
 
 @if (Model.IsCordovaEnabled)
 {
