--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivationSuccess.cshtml
@@ -7,14 +7,14 @@
     ViewBag.HideTenancyView = true;
 }
 
-<h1 class="mb-4 fs-3">
+<h1 class="h3">
     Your Account is Activated!
 </h1>
 
-<div class="alert alert-success">
+<h2 class="h4" title="Your account has been successfully activated.">
     Great news!
     Your account has been successfully activated. You can now log in to @BrandingProvider.AppName and start exploring all the features we have to offer.
-</div>
+</h2>
 
 <p>
     Click the button below to head straight to the login page.
