--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/PasswordResetLinkSent.cshtml
@@ -14,15 +14,15 @@
     ViewBag.Keywords = "password reset link sent,password reset";
 }
 
-<h1 class="mb-4 fs-3">
+<h1 class="h3">
     Password Reset Instructions Sent!
 </h1>
 
-<div class="alert alert-success">
+<h2 class="h4" title="We've sent an email with instructions to reset your password to the address you provided.">
     We've sent an email with instructions to reset your password to the address you provided.
-</div>
+</h2>
 
-<h2 class="fs-5">What to do next</h2>
+<h2 class="h5">What to do next</h2>
 
 <ul>
     <li>
@@ -36,7 +36,7 @@
     </li>
 </ul>
 
-<h2 class="fs-5">
+<h2 class="h5">
     Tips
 </h2>
 
@@ -49,7 +49,7 @@
     </li>
 </ul>
 
-<h2 class="fs-5">
+<h2 class="h5">
     Need Help?
 </h2>
 
