--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLinkSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLinkSuccess.cshtml
@@ -16,11 +16,11 @@
     ViewBag.ShowAppTitle = true;
 }
 
-<h1 class="mb-4 fs-3">
+<h1 class="h3">
     All Set! We've Sent a New Activation Email.
 </h1>
 
-<div class="alert alert-success">
+<h2 class="h4" title="We've successfully sent a new activation link to your email address.">
     We've successfully sent a new activation link to your email address.
     Make sure to check your inbox (and maybe even your spam folder) for the email.
-</div>
+</h2>
