--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -15,13 +15,13 @@
     ViewBag.Keywords = "password reset success";
 }
 
-<h1 class="mb-4 fs-3">
+<h1 class="h3">
     Password Reset Successful!
 </h1>
 
-<div class="alert alert-success">
+<h2 class="h4" title=" Your password has been successfully reset!">
     Your password has been successfully reset! You can now log in to your account with your new password.
-</div>
+</h2>
 
 <div class="d-grid gap-2">
     <a abp-button="Primary" asp-page="/Account/Login">Sign In</a>
