--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegisterSuccess.cshtml
@@ -32,7 +32,7 @@
         Click the button below to jump right into the main application.
     </p>
 
-    <div class="d-grid gap-2">
+    <div class="d-grid gap-2 mb-3">
         <a abp-button="Primary" asp-page="/Account/MainApp">Go to Main Application</a>
     </div>
 }
@@ -60,12 +60,12 @@ else
         Your account is ready. Click the button below to sign into your account.
     </p>
 
-    <div class="d-grid gap-2">
+    <div class="d-grid gap-2 mb-3">
         <a abp-button="Primary" asp-page="/Account/Login">Sign In</a>
     </div>
 }
 
-<h2 class="h5 mt-1">
+<h2 class="h5">
     Need Help?
 </h2>
 
