--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPasswordSuccess.cshtml
@@ -23,6 +23,6 @@
     Your password has been successfully reset! You can now log in to your account with your new password.
 </h2>
 
-<div class="d-grid gap-2">
+<div class="d-grid gap-2 my-3">
     <a abp-button="Primary" asp-page="/Account/Login">Sign In</a>
 </div>
