Fixed minor issues

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -313,7 +313,7 @@
         <div class="form-check mb-3">
             <input asp-for="Input.IsUsingUserName" class="form-check-input" type="checkbox" aria-describedby="IsUsingUserNameHelp">
             <label class="form-check-label" for="Input_IsUsingUserName">
-                Enable Username Lookup
+                Enable username lookup
             </label>
             <div id="IsUsingUserNameHelp" class="form-text">
                 Switch to search by Username (otherwise, search by email).
