--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
@@ -29,7 +29,7 @@
 
 <form method="post">
     <div class="mb-3" id="password-wrapper">
-        <label for="Input_Password" class="form-label">@L["DisplayName:Password"]</label><span>*</span>
+        <label for="Input_Password" class="form-label me-1">@L["DisplayName:Password"]</label><span>*</span>
         <div class="input-group">
             <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
             <button type="button" class="toggle-password btn btn-outline-secondary">
