--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
@@ -25,7 +25,7 @@
 
 <p>
     Haven't received the code?            
-    <a href="@Url.Page("./TwoFactorRequest")">Request a new code</a>
+    <a href="@Url.Page("./TwoFactorRequest")">Resend Code</a>
 </p>
 
 <form method="post">
