--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -189,13 +189,11 @@
                     }
                 });
 
-            refreshUserOptions(initEmail || initUserName);
+            refreshUserOptions(true);
             if (initEmail) {
                 switchToEmailAddress(initEmail);
             } else if (initUserName) {
                 switchToUserName(initUserName);
-            } else {
-                switchToEmailAddress('');
             }
 
             // Update time
