Fixed a bug when a user signs in

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -189,7 +189,7 @@
                     }
                 });
 
-            refreshUserOptions(true);
+            refreshUserOptions(!(initEmail || initUserName));
             if (initEmail) {
                 switchToEmailAddress(initEmail);
             } else if (initUserName) {
