--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
@@ -24,7 +24,7 @@
     Please choose your preferred method for receiving the code.
 </p>
 
-<form method="post" data-ajax="true" data-ajax-method="post" data-ajax-complete="completed">
+<form method="post">
     <div class="d-grid gap-2">
         @{
             foreach (var p in Model.TwoFactorCodeProviders)
