--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -41,7 +41,7 @@
     <abp-input asp-for="UserId" />
     <abp-input asp-for="ResetToken" />
 
-    <div class="mb-3" id="password-wrapper">
+    <div class="mb-3 password-wrapper">
         <label asp-for="Password" class="form-label"></label><span>*</span>
         <div class="input-group">
             <input asp-for="Password" class="form-control" data-auto-focus="true" autocomplete="new-password" />
@@ -51,7 +51,17 @@
         </div>
     </div>
 
-    <abp-input asp-for="ConfirmPassword" autocomplete="off" />
+    <div class="mb-3 password-wrapper">
+        <label for="ConfirmPassword" class="form-label">@L["DisplayName:ConfirmPassword"]</label>
+        <span> * </span>
+        <div class="input-group">
+            <input class="form-control" id="ConfirmPassword" type="password" autocomplete="new-password" asp-for="ConfirmPassword" />
+            <button type="button" class="toggle-password btn btn-outline-secondary">
+                <i class="toggle-icon far fa-eye"></i>
+            </button>
+        </div>
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+    </div>
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary">
