--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/UpdatePassword.cshtml
@@ -28,7 +28,7 @@
 </p>
 
 <form method="post">
-    <div class="mb-3" id="password-wrapper">
+    <div class="mb-3 password-wrapper">
         <label for="Input_Password" class="form-label me-1">@L["DisplayName:Password"]</label><span>*</span>
         <div class="input-group">
             <input class="form-control" id="Input_Password" type="password" autocomplete="new-password" asp-for="Input.Password" />
@@ -38,7 +38,18 @@
         </div>
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
-    <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
+
+    <div class="mb-3 password-wrapper">
+        <label for="Input_ConfirmPassword" class="form-label">@L["DisplayName:ConfirmPassword"]</label>
+        <span> * </span>
+        <div class="input-group">
+            <input class="form-control" id="Input_ConfirmPassword" type="password" autocomplete="new-password" asp-for="Input.ConfirmPassword" />
+            <button type="button" class="toggle-password btn btn-outline-secondary">
+                <i class="toggle-icon far fa-eye"></i>
+            </button>
+        </div>
+        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+    </div>
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input">
