--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Register.cshtml
@@ -18,9 +18,14 @@
     ViewBag.ShowAppTitle = true;
 }
 
-<h1 class="mb-4 fs-3">
+<h1 class="mb-1 fs-3">
     Create an Organization Account
 </h1>
+<div class="mb-4">
+    <a href="@Url.Page("./FindOrganization")">
+        <i class="fas fa-chevron-left me-1"></i>Back
+    </a>
+</div>
 
 <p>
     Unlock the Power of @BrandingProvider.AppName in 3 Easy Steps!
