--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -30,6 +30,16 @@
     });
 }
 
+<style>
+    input[readonly] {
+        background-color: #f5f5f5;
+        border: 1px solid #ced4da;
+        color: #495057;
+        cursor: not-allowed;
+        opacity: 0.8;
+    }
+</style>
+
 @if (Model.ShowActivationLink)
 {
     <div class="alert alert-danger">
