--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -94,7 +94,7 @@
             @L["Continue"]
             <span class="spinner-box"></span>
         </abp-button>
-        <a abp-button="Secondary" href="forgotPwdLink">
+        <a abp-button="Secondary" href="@forgotPwdLink">
             @L["ForgotPassword"]
         </a>
     </div>
