--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -195,6 +195,8 @@
             } else if (initUserName) {
                 switchToUserName(initUserName);
             } else if (viewModel.users().length == 0) {
+                // Switch to input form 
+                viewModel.optionsVisible(false);
                 switchToEmailAddress('');
             }
 
